# Datascientest_NLP

./: .README.md.un~  .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01_1_API_call.ipynb  01_explore_test_data.ipynb
reports/figures/: example_dataframe_regression.html  example_dataframe_regression_cold_start.html  example_dataframe_regression_cold_start_one_week.html  example_dataframe_regression_data_rich.html  table.html
reports/figures/01_explore_test_data/: lda_vis.html
